syntax = "proto3";
option csharp_namespace = "ProductGrpc.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


package productGrpc;

service ProductGrpcCommunicator {
	rpc Create(ProductCreateRequest) returns (ProductModel);
	rpc Update(ProductUpdateRequest) returns (ProductModel);
	rpc Delete(ProductIndexRequest)	returns (ProductDeleted);
	rpc GetProduct(ProductIndexRequest)	returns (ProductModel);
	rpc GetProducts(google.protobuf.Empty) returns (ProductsResult);
	rpc GetProductsAsync(google.protobuf.Empty) returns (stream ProductModel);

}

message ProductCreateRequest {
	string name = 1;
	string description = 2;
	float price = 3;
}

message ProductUpdateRequest {
	string id = 1;
	string name = 2;
	string description = 3;
	float price = 4;
}

message ProductIndexRequest {
	string id = 1;
}

message ProductModel {
	string id = 1;
	string name = 2;
	string description = 3;
	float price = 4;
	int32 status = 5;
	google.protobuf.Timestamp createdAt = 6;
}

message ProductsResult {
	repeated ProductModel products = 1;
}

message ProductDeleted {
	string id = 1;
}