syntax = "proto3";

option csharp_namespace = "ProductGrpc.Protos";

package product;

service ProductCreator {
	rpc Create (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
	string name = 1;
	string description = 2;
	float price = 3;
}

message ProductResponse {
	string id = 1;
	string name = 2;
	string description = 3;
	float price = 4;
	string createdAt = 5;
}